<resources>

    <!-- SYS -->
    <string name="app_name">DrawerAndTabs</string>
    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>
    <string name="dummy">Dummy</string>

    <!-- MENUS -->
    <string name="home">Home</string>
    <string name="settings">Settings</string>
    <string name="account">Account</string>
    <string name="bookmarks">Bookmarks</string>
    <string name="help">Help</string>

    <string name="action_settings">Settings</string>

</resources>
